bk_ida/gccida/g1/fixup_stack_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_stack_1/src/function.c:3128:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_stack_1/src/function.c:3139:25: error: use of undeclared identifier 'machine_mode'
&& !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)x + 2), v6.rtx) ) 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fixup_stack_1/src/obj/function.o] Error 1
